--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <nav class="collapse navbar-collapse navbar-right" role="navigation">
             <ul id="nav" class="nav navbar-nav">
                 <li class="current"><a href="#body">Inicio</a></li>
-                <li><a href="#features">¿Quiens soy?</a></li>
+                <li><a href="#features">¿Quién soy?</a></li>
                 <li><a href="#works">Trabajos</a></li>
                 <li><a href="#contact">Contacto</a></li>
             </ul>
@@ -115,39 +115,48 @@
 				<div class="carousel-inner" role="listbox">
 
 					<!-- single slide -->
-					<div class="item active" style="background-image: url(img/slider/slide-banner2-72px-1920x1280-dark.jpg);">
+					<div class="item active" style="background-image: url(img/slider/banner-inicio1.jpg);">
 
             <div class="carousel-caption">
-							<h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Diseño<span> Responsive</span>!</h2>
-							<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">/Creatividad</span> en cada trabajo.</h3>
-							<p data-wow-duration="1000ms" class="wow slideInRight animated">Tu imagen dice mas que mil palabras</p>
+              <!-- <div class="col-md-3" data-wow-duration="1000ms">
+                <h2 style="color:#fff;">hola</h2>
+                  </div> -->
+              <!-- <div class="col-md-12" data-wow-duration="1000ms"> -->
+              <div class="carousel-box1">
+                <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Diseño<span> Responsive</span>!</h2>
+                <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">/Creatividad</span> en cada trabajo.</h3>
+                <p data-wow-duration="1000ms" class="wow slideInRight animated">Tu imagen dice mas que mil palabras</p>
 
-                        <!-- <img src="img/icono-white-behance-5.png" alt="">
-                        <img src="img/icono-white-linkedin-5.png" alt=""> -->
 							<ul class="social-links text-center">
-								<li><a href="https://www.behance.net/rsabando93acfe" target="_blank"><i><img src="img/logos/icono-white-behance-5-400x400.png" alt=""></i></a></li>
-								<li><a href="https://www.linkedin.com/in/ronny-steven-sabando-lindao-7b0349130" target="_blank"><i><img src="img/logos/icono-white-linkedin-5-400x400.png" alt=""></i></a></li>
+								<li><a class="wow fadeInUp animated" href="https://www.behance.net/rsabando93acfe" target="_blank"><i><img src="img/logos/icono-blue-behance-2-400x400.png" alt=""></i></a></li>
+								<li><a class="wow fadeInUp animated" href="https://www.linkedin.com/in/ronny-steven-sabando-lindao-7b0349130" target="_blank"><i><img src="img/logos/icono-blue-linkedin-2-400x400.png" alt=""></i></a></li>
+              </ul>
+            </div>
+            <!-- </div> -->
 
-							</ul>
+
 						</div>
 					</div>
 					<!-- end single slide -->
 
 					<!-- single slide -->
 
-					<div class="item" style="background-image: url(img/slider/slide-banner1-72px-1920x1280-dark.jpg);">
+					<div class="item" style="background-image: url(img/slider/banner-inicio2.jpg);">
 
 						<div class="carousel-caption">
-							<h2 data-wow-duration="500ms" data-wow-delay="500ms" class="wow bounceInDown animated">Contenido de<span> Valor</span>!</h2>
-							<h3 data-wow-duration="500ms" class="wow slideInLeft animated"><span class="color">/Innovacion</span> para tu negocio.</h3>
-							<p data-wow-duration="500ms" class="wow slideInRight animated">Ofrece tus productos y servicios de forma atractiva</p>
+                <div class="carousel-box2">
+							<h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Contenido de<span> Valor</span>!</h2>
+							<h3 data-wow-duration="1000ms" class="wow slideInRight animated"><span class="color">/Innovación</span> para tu negocio.</h3>
+							<p data-wow-duration="1000ms" class="wow slideInLeft animated">Ofrece tus productos y servicios de forma atractiva</p>
 
               <ul class="social-links text-center">
-                <li><a href="https://www.behance.net/rsabando93acfe" target="_blank"><i><img src="img/logos/icono-white-behance-5-400x400.png" alt=""></i></a></li>
-								<li><a href="https://www.linkedin.com/in/ronny-steven-sabando-lindao-7b0349130" target="_blank"><i><img src="img/logos/icono-white-linkedin-5-400x400.png" alt=""></i></a></li>
+                <li><a class="wow fadeInUp animated" href="https://www.behance.net/rsabando93acfe" target="_blank"><i><img src="img/logos/icono-blue-behance-2-400x400.png" alt=""></i></a></li>
+								<li><a class="wow fadeInUp animated" href="https://www.linkedin.com/in/ronny-steven-sabando-lindao-7b0349130" target="_blank"><i><img src="img/logos/icono-blue-linkedin-2-400x400.png" alt=""></i></a></li>
 
               </ul>
+            </div>
 						</div>
+
 					</div>
 					<!-- end single slide -->
 
@@ -168,7 +177,7 @@
 		<section id="features" class="features">
 			<div class="container">
         <div class="sec-title text-center mb50 wow slideInRight animated" data-wow-duration="500ms">
-          <h2>Quien soy</h2>
+          <h2>Quién soy</h2>
           <div class="devider"><i class="fa fa-users fa-lg"></i></div>
         </div>
 				<div class="row">
@@ -184,7 +193,7 @@
       	<div class="col-md-6"  data-wow-duration="500ms">
           <div class="quiensoy wow slideInRight animated">
             <div class="sec-sub-title text-center">
-              <h4 class="parrafo1">Me llamo Ronny Sabando, soy Lcdo. en Diseño web y aplicaciones multimedia.
+              <h4>Me llamo Ronny Sabando, soy Lcdo. en Diseño web y aplicaciones multimedia.
                 me especializo en el desarrollo de sitios web responsive mediante customización
                 de plantillas, gestores de contenido (Wordpress) y diseño a medida. También he trabajado en proyectos
                 de desarrollo de aplicaciones y videojuegos para plataformas móviles y web.  </h4>
@@ -195,6 +204,33 @@
         </div>
 			</div>
 		</section>
+
+
+    <section id="diseñoweb" class="diseñoweb">
+      <div class="container">
+
+        <div class="row">
+
+          <!-- <div class="col-md-3" data-wow-duration="1000ms">
+            <div class="cuadroflotante wow slideInLeft animated">
+              <img src="img/quiensoy.jpg" alt="">
+            </div>
+         </div> -->
+
+         <div class="col-md-9 pull-right" data-wow-duration="1000ms">
+           <div class="cuadroflotante wow slideInRight animated">
+             <div class="sec-sub-title text-center">
+               <h3>Diseño de sitios web a la <span>Medida</span> de tu<span> Negocio</span></h3>
+               <h4>Crea presencia digital para tu marca y atrae a muchos mas clientes. </h4>
+                 <img src="img/logos/brand.png" alt="">
+             </div>
+           </div>
+        </div>
+
+        </div>
+      </div>
+
+  </section>
 
         <!--
         End Features
@@ -215,7 +251,7 @@
 					</div>
 
 					<div class="sec-sub-title text-center wow slideInLeft animated">
-						<p>Desarrollo de videojuegos, páginas web, logos, ilustraciones.</p>
+						<h4>Desarrollo de videojuegos, páginas web, logos, ilustraciones.</h4>
 					</div>
 
 					<div class="work-filter wow fadeInRight animated" data-wow-duration="500ms">
@@ -231,22 +267,24 @@
 				</div>
 			</div>
 
-			<div class="project-wrapper">
-<div class="container wow fadeInRight animated">
+			<div class="project-wrapper wow fadeInRight animated">
+<!-- <div class="container"> -->
 				<figure class="mix work-item videojuego">
+          <a href="#features">
 					<img src="img/works/galeria-game1.jpg" alt="">
 					<div class="overlay">
 
-						<h2 class="fancybox" rel="works" title="Ñami Ñam" href="img/works/videojuego-cuadro.jpg">Ñami ñam</h2>
+						<h2 class="fancybox" rel="works" title="Ñami Ñam" href="img/works/galeria-game1.jpg">Ñami ñam</h2>
             <p>Videojuego móvil</p>
 					</div>
+        </a>
 				</figure>
 
 				<figure class="mix work-item web">
 					<img src="img/works/galeria-web1.jpg" alt="">
 					<div class="overlay">
 
-						<h2 class="fancybox" rel="works" title="Sitio web Ñami ñam" href="img/works/web-cuadro.jpg">Ñami ñam</h2>
+						<h2 class="fancybox" rel="works" title="Sitio web Ñami ñam" href="img/works/galeria-web1.jpg">Ñami ñam</h2>
 						<p>Sitio web</p>
 					</div>
 				</figure>
@@ -255,7 +293,7 @@
 					<img src="img/works/galeria-game4.jpg" alt="">
 					<div class="overlay">
 
-						<h2 class="fancybox" rel="works" title="Videojuego Anibopi" href="img/works/item-3.jpg">Anibopi</h2>
+						<h2 class="fancybox" rel="works" title="Videojuego Anibopi" href="img/works/galeria-game4.jpg">Anibopi</h2>
 						<p>Videojuego móvil</p>
 					</div>
 				</figure>
@@ -264,7 +302,7 @@
 					<img src="img/works/galeria-web2.jpg" alt="">
 					<div class="overlay">
 
-						<h2 class="fancybox" rel="works" title="Sitio web Ctmas" href="img/works/item-4.jpg">Ctmas</h2>
+						<h2 class="fancybox" rel="works" title="Sitio web Ctmas" href="img/works/galeria-web2.jpg">Ctmas</h2>
 						<p>Sitio web</p>
 					</div>
 				</figure>
@@ -273,15 +311,44 @@
 					<img src="img/works/galeria-game3.jpg" alt="">
 					<div class="overlay">
 
-						<h2 class="fancybox" rel="works" title="Videojuego T. Valdivia" href="img/works/item-5.jpg">Tesoros de Valdivia</h2>
+						<h2 class="fancybox" rel="works" title="Videojuego T. Valdivia" href="img/works/galeria-game3.jpg">Tesoros de Valdivia</h2>
 						<p>Videojuego web</p>
 					</div>
 				</figure>
 
-			</div>
+			<!-- </div> -->
 </div>
 
 		</section>
+
+    <section id="diseñoweb2" class="diseñoweb2">
+      <div class="container">
+
+        <div class="row">
+
+         <div class="col-md-4" data-wow-duration="1000ms">
+           <div class="cuadroflotante2 wow fadeInDown animated">
+             <div class="sec-sub-title text-center">
+               <!-- <h3>Diseño de marca <span>Personal</span>  o<span> Corporativa</span></h3>
+               <h4>Tu estilo es lo que marca la diferencia. </h4> -->
+               <h3>Dominio de herramientas para el mejor desarrollo de tu marca <span>Personal </span>o<span> Corporativa</span></h3>
+               <h4>- Wordpress</h4>
+               <h4>- Bootstrap 4</h4>
+               <h4>- Html5</h4>
+               <h4>- Css3</h4>
+               <h4>- Php</h4>
+               <h4>- Javascript</h4>
+               <h4>- Adobe Photoshop</h4>
+               <h4>- Adobe Ilustrator</h4>
+                 <!-- <img src="img/logos/brand.png" alt=""> -->
+             </div>
+           </div>
+        </div>
+        <!-- <div class="col-md-6" data-wow-duration="1000ms">
+       </div> -->
+        </div>
+      </div>
+  </section>
 
         <!--
         End Our Works
@@ -319,39 +386,65 @@
 						<div class="devider"><i class="fa fa-pencil fa-lg"></i></div>
 					</div>
 
-<div data-wow-duration="500ms">
-  <div class="whatsapp wow fadeInDown animated">
-    <ul class="social-links text-center">
-      <li><a href=""><i><img src="img/logos/icono-white-whatsapp-5-400x400.png" alt=""></i></a></li>
-      <li><h3>987695650</h3></li>
-    </ul>
+          <div data-wow-duration="500ms">
+            <div class="whatsapp wow fadeInDown animated">
+              <ul class="social-links text-center">
+                <li><a href=""><i><img src="img/logos/icono-white-whatsapp-5-400x400.png" alt=""></i></a></li>
+                <li><h3>987695650</h3></li>
+              </ul>
 
-  </div>
-  <div class="sec-sub-title wow fadeInDown animated" data-wow-duration="1000ms">
+            </div>
+            <div class="sec-sub-title wow fadeInDown animated" data-wow-duration="1000ms">
 
-    <p id="parrafocontacto">¿Quieres contactarte conmigo? envíame un mensaje mediante el siguiente formulario
-    o a través de mi número de whatsapp</p>
+              <h4>¿Quieres contactarte conmigo? envíame un mensaje mediante el siguiente formulario
+              o a través de mi número de whatsapp</h4>
 
-  </div>
+            </div>
+          </div>
+
+<div class="col-md-6"  data-wow-duration="500ms">
+  <!-- contact address -->
+    <div class="contact-address">
+      <div class="datos">
+        <img src="img/logos/email.png" alt="">
+        <ul>
+          <li> <p>rsabando@espol.edu.ec</p></li>
+          <li> <p>rsabando@espol.edu.ec</p></li>
+        </ul>
+      </div>
+
+      <div class="datos">
+        <img id="phone" src="img/logos/phone.png" alt="">
+        <ul>
+          <li><p>Tel:(+593) 2550589</p></li>
+          <li><p>Cel:(+593) 987695650</p></li>
+        </ul>
+      </div>
+
+    </div>
 </div>
 
 
-					<!-- contact address -->
-					<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 wow fadeInLeft animated" data-wow-duration="500ms">
-						<div class="contact-address">
-							<h3>Datos</h3>
-              <p>Correos:</p>
-							<p>rsabando@espol.edu.ec</p>
-              <p>rsabando93@gmail.com</p>
-              <p>Tel:(+593) 2550589</p>
-              <p>Cel:(+593) 987695650</p>
-							<p>Duran. Ecuador.</p>
-						</div>
-					</div>
-					<!-- end contact address -->
+<div class="col-md-6"  data-wow-duration="500ms">
+
+  <!-- contact address -->
+    <div class="contact-address">
+      <div class="datosredes">
+        <a href="https://www.behance.net/rsabando93acfe" target="_blank"><i><img id="phone" src="img/logos/icono-white-behance-2-400x400.png" alt=""></i></a>
+        <a href="https://www.linkedin.com/in/ronny-steven-sabando-lindao-7b0349130" target="_blank"><i><img id="phone" src="img/logos/icono-white-linkedin-2-400x400.png" alt=""></i></a>
+
+        <!-- <img id="phone" src="img/logos/icono-white-behance-2-400x400.png" alt="">
+        <img id="phone" src="img/logos/icono-white-linkedin-2-400x400.png" alt=""> -->
+      </div>
+    </div>
+
+  <!-- end contact address -->
+</div>
+
+
 
 					<!-- contact form -->
-					<div class="col-lg-8 col-md-9 col-sm-8 col-xs-12 wow fadeInDown animated" data-wow-duration="500ms" data-wow-delay="300ms">
+					<!-- <div class="col-lg-8 col-md-9 col-sm-8 col-xs-12 wow fadeInDown animated" data-wow-duration="500ms" data-wow-delay="300ms">
 						<div class="contact-form">
 							<h3>Formulario</h3>
 							<form method="post" action="" id="contact-form">
@@ -371,7 +464,7 @@
 								</div>
 							</form>
 						</div>
-					</div>
+					</div> -->
 					<!-- end contact form -->
 
 					<!-- footer social links -->
@@ -386,14 +479,14 @@
 			<!-- End Google map -->
 
 		</section>
-<div id="respuesta">
+<!-- <div id="respuesta">
 
-</div>
+</div> -->
         <!--
         End Contact Us
         ==================================== -->
-	<div class="espacio2">
-</div>
+	<!-- <div class="espacio2"></div> -->
+
 		<footer id="footer" class="footer">
 			<div class="container">
 				<div class="row">
