--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				<div class="carousel-inner" role="listbox">
 
 					<!-- single slide -->
-					<div class="item active" style="background-image: url(img/slider/banner-inicio1.jpg);">
+					<div class="item active" style="background-image: url(img/slider/banner-inicio1-ver2.jpg);">
 
             <div class="carousel-caption">
               <!-- <div class="col-md-3" data-wow-duration="1000ms">
@@ -141,7 +141,7 @@
 
 					<!-- single slide -->
 
-					<div class="item" style="background-image: url(img/slider/banner-inicio2.jpg);">
+					<div class="item" style="background-image: url(img/slider/banner-inicio2op-ver2.jpg);">
 
 						<div class="carousel-caption">
                 <div class="carousel-box2">
@@ -220,8 +220,11 @@
          <div class="col-md-9 pull-right" data-wow-duration="1000ms">
            <div class="cuadroflotante wow slideInRight animated">
              <div class="sec-sub-title text-center">
-               <h3>Diseño de sitios web a la <span>Medida</span> de tu<span> Negocio</span></h3>
-               <h4>Crea presencia digital para tu marca y atrae a muchos mas clientes. </h4>
+               <div class="recuadroblanco">
+                 <h3>Diseño de sitios web a la <span>Medida</span> de tu<span> Negocio</span></h3>
+                 <h4>Crea presencia digital para tu marca y atrae a muchos mas clientes. </h4>
+               </div>
+
                  <img src="img/logos/brand.png" alt="">
              </div>
            </div>
@@ -270,7 +273,7 @@
 			<div class="project-wrapper wow fadeInRight animated">
 <!-- <div class="container"> -->
 				<figure class="mix work-item videojuego">
-          <a href="#features">
+          <a href="https://play.google.com/store/apps/details?id=com.espol.nami&hl=es" target="_blank">
 					<img src="img/works/galeria-game1.jpg" alt="">
 					<div class="overlay">
 
@@ -281,39 +284,47 @@
 				</figure>
 
 				<figure class="mix work-item web">
+          <a href="http://xn--amiam-ntad.com/" target="_blank">
 					<img src="img/works/galeria-web1.jpg" alt="">
 					<div class="overlay">
 
 						<h2 class="fancybox" rel="works" title="Sitio web Ñami ñam" href="img/works/galeria-web1.jpg">Ñami ñam</h2>
 						<p>Sitio web</p>
 					</div>
+        </a>
 				</figure>
 
 				<figure class="mix work-item videojuego">
+          <a href="https://play.google.com/store/apps/details?id=eduec.tea.anibopi" target="_blank">
 					<img src="img/works/galeria-game4.jpg" alt="">
 					<div class="overlay">
 
 						<h2 class="fancybox" rel="works" title="Videojuego Anibopi" href="img/works/galeria-game4.jpg">Anibopi</h2>
 						<p>Videojuego móvil</p>
 					</div>
+        </a>
 				</figure>
 
 				<figure class="mix work-item web">
+          <a href="http://www.ctmas.transespol.gob.ec/" target="_blank">
 					<img src="img/works/galeria-web2.jpg" alt="">
 					<div class="overlay">
 
 						<h2 class="fancybox" rel="works" title="Sitio web Ctmas" href="img/works/galeria-web2.jpg">Ctmas</h2>
 						<p>Sitio web</p>
 					</div>
+        </a>
 				</figure>
 
 				<figure class="mix work-item videojuego">
+          <a href="https://www.vallevaldivia.com/juego/index.html" target="_blank">
 					<img src="img/works/galeria-game3.jpg" alt="">
 					<div class="overlay">
 
 						<h2 class="fancybox" rel="works" title="Videojuego T. Valdivia" href="img/works/galeria-game3.jpg">Tesoros de Valdivia</h2>
 						<p>Videojuego web</p>
 					</div>
+        </a>
 				</figure>
 
 			<!-- </div> -->
@@ -331,7 +342,7 @@
              <div class="sec-sub-title text-center">
                <!-- <h3>Diseño de marca <span>Personal</span>  o<span> Corporativa</span></h3>
                <h4>Tu estilo es lo que marca la diferencia. </h4> -->
-               <h3>Dominio de herramientas para el mejor desarrollo de tu marca <span>Personal </span>o<span> Corporativa</span></h3>
+               <h3>Dominio de herramientas para el mejor desarrollo de tu sitio web <span>Personal </span>o<span> Corporativo</span></h3>
                <h4>- Wordpress</h4>
                <h4>- Bootstrap 4</h4>
                <h4>- Html5</h4>
