--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				<div class="carousel-inner" role="listbox">
 
 					<!-- single slide -->
-					<div class="item active" style="background-image: url(img/slider/banner-inicio1-ver2.jpg);">
+					<div id="slide1" class="item active">
 
             <div class="carousel-caption">
               <!-- <div class="col-md-3" data-wow-duration="1000ms">
@@ -407,8 +407,8 @@
             </div>
             <div class="sec-sub-title wow fadeInDown animated" data-wow-duration="1000ms">
 
-              <h4>¿Quieres contactarte conmigo? envíame un mensaje mediante el siguiente formulario
-              o a través de mi número de whatsapp</h4>
+              <h4>¿Quieres contactarte conmigo? envíame un mensaje a través de mi número de whatsapp o
+              a cualquiera de mis correos electrónicos</h4>
 
             </div>
           </div>
