--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
 				<div class="carousel-inner" role="listbox">
 
 					<!-- single slide -->
-					<div id="slide1" class="item active">
 
+					<div class="item active">
+<div class="slide1">
             <div class="carousel-caption">
               <!-- <div class="col-md-3" data-wow-duration="1000ms">
                 <h2 style="color:#fff;">hola</h2>
@@ -136,13 +137,14 @@
 
 
 						</div>
-					</div>
+</div>
+          		</div>
 					<!-- end single slide -->
 
 					<!-- single slide -->
 
-					<div class="item" style="background-image: url(img/slider/banner-inicio2op-ver2.jpg);">
-
+					<div class="item">
+<div class="slide2">
 						<div class="carousel-caption">
                 <div class="carousel-box2">
 							<h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Contenido de<span> Valor</span>!</h2>
@@ -156,7 +158,7 @@
               </ul>
             </div>
 						</div>
-
+      </div>
 					</div>
 					<!-- end single slide -->
 
