--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
     </head>
 
-    <body id="body">
+    <body id="inicio">
 
 		<!-- preloader -->
 		<div id="preloader">
-			<img src="img/preloader4.svg" alt="Preloader">
+			<img src="img/preloader3.svg" alt="Preloader">
 		</div>
 		<!-- end preloader -->
 
@@ -65,7 +65,7 @@
 					<!-- /responsive nav button -->
 
 					<!-- logo -->
-           <a class="navbar-brand" href="#body">
+           <a class="navbar-brand" href="#inicio">
 						<h1 id="logo">
 							<img src="img/ronnylogo800x600-white.png" alt="Brandi">
 						</h1>
@@ -79,10 +79,10 @@
 				<!-- main nav -->
         <nav class="collapse navbar-collapse navbar-right" role="navigation">
             <ul id="nav" class="nav navbar-nav">
-                <li class="current"><a href="#body">Inicio</a></li>
-                <li><a href="#features">¿Quién soy?</a></li>
-                <li><a href="#works">Trabajos</a></li>
-                <li><a href="#contact">Contacto</a></li>
+                <li class="current"><a href="#inicio">Inicio</a></li>
+                <li><a href="#quiensoy">¿Quién soy?</a></li>
+                <li><a href="#trabajos">Trabajos</a></li>
+                <li><a class="li-last" href="#contacto">Contacto</a></li>
             </ul>
         </nav>
 				<!-- /main nav -->
@@ -104,10 +104,10 @@
 			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 
 				<!-- Indicators bullet -->
-				<ul class="carousel-indicators">
+				<!-- <ul class="carousel-indicators">
 					<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 					<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-				</ul>
+				</ul> -->
 
 				<!-- End Indicators bullet -->
 
@@ -129,8 +129,8 @@
                 <p data-wow-duration="1000ms" class="wow slideInRight animated">Tu imagen dice mas que mil palabras</p>
 
 							<ul class="social-links text-center">
-								<li><a class="wow fadeInUp animated" href="https://www.behance.net/rsabando93acfe" target="_blank"><i><img src="img/logos/icono-blue-behance-2-400x400.png" alt=""></i></a></li>
-								<li><a class="wow fadeInUp animated" href="https://www.linkedin.com/in/ronny-steven-sabando-lindao-7b0349130" target="_blank"><i><img src="img/logos/icono-blue-linkedin-2-400x400.png" alt=""></i></a></li>
+								<li><a class="wow fadeInUp animated" href="https://www.behance.net/rsabando93acfe" target="_blank"><i><img src="img/logos/icono-cian-behance-2-400x400.png" alt=""></i></a></li>
+								<li><a class="wow fadeInUp animated" href="https://www.linkedin.com/in/ronny-steven-sabando-lindao-7b0349130" target="_blank"><i><img src="img/logos/icono-cian-linkedin-2-400x400.png" alt=""></i></a></li>
               </ul>
             </div>
             <!-- </div> -->
@@ -143,7 +143,7 @@
 
 					<!-- single slide -->
 
-					<div class="item">
+					<!-- <div class="item">
 <div class="slide2">
 						<div class="carousel-caption">
                 <div class="carousel-box2">
@@ -152,14 +152,16 @@
 							<p data-wow-duration="1000ms" class="wow slideInLeft animated">Ofrece tus productos y servicios de forma atractiva</p>
 
               <ul class="social-links text-center">
-                <li><a class="wow fadeInUp animated" href="https://www.behance.net/rsabando93acfe" target="_blank"><i><img src="img/logos/icono-blue-behance-2-400x400.png" alt=""></i></a></li>
-								<li><a class="wow fadeInUp animated" href="https://www.linkedin.com/in/ronny-steven-sabando-lindao-7b0349130" target="_blank"><i><img src="img/logos/icono-blue-linkedin-2-400x400.png" alt=""></i></a></li>
+                <li><a class="wow fadeInUp animated" href="https://www.behance.net/rsabando93acfe" target="_blank"><i><img src="img/logos/icono-cian-behance-2-400x400.png" alt=""></i></a></li>
+								<li><a class="wow fadeInUp animated" href="https://www.linkedin.com/in/ronny-steven-sabando-lindao-7b0349130" target="_blank"><i><img src="img/logos/icono-cian-linkedin-2-400x400.png" alt=""></i></a></li>
 
               </ul>
             </div>
 						</div>
       </div>
-					</div>
+
+
+					</div> -->
 					<!-- end single slide -->
 
 				</div>
@@ -176,7 +178,7 @@
         Features
         ==================================== -->
 
-		<section id="features" class="features">
+		<section id="quiensoy" class="features">
 			<div class="container">
         <div class="sec-title text-center mb50 wow slideInRight animated" data-wow-duration="500ms">
           <h2>Quién soy</h2>
@@ -195,7 +197,7 @@
       	<div class="col-md-6"  data-wow-duration="500ms">
           <div class="quiensoy wow slideInRight animated">
             <div class="sec-sub-title text-center">
-              <h4>Me llamo Ronny Sabando, soy Lcdo. en Diseño web y aplicaciones multimedia.
+              <h4>Me llamo Ronny Sabando, soy Lcdo. en Diseño web y aplicaciones multimedia,
                 me especializo en el desarrollo de sitios web responsive mediante customización
                 de plantillas, gestores de contenido (Wordpress) y diseño a medida. También he trabajado en proyectos
                 de desarrollo de aplicaciones y videojuegos para plataformas móviles y web.  </h4>
@@ -246,7 +248,7 @@
         Our Works
         ==================================== -->
 
-		<section id="works" class="works clearfix">
+		<section id="trabajos" class="works clearfix">
 			<div class="container">
 				<div class="row">
 
@@ -389,7 +391,7 @@
         Contact Us
         ==================================== -->
 
-		<section id="contact" class="contact">
+		<section id="contacto" class="contact">
 			<div class="container">
 				<div class="row mb50">
           <!-- <div class="espacio2">
