--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 			<div class="project-wrapper wow fadeInRight animated">
 <!-- <div class="container"> -->
 				<figure class="mix work-item videojuego">
-          <a href="https://play.google.com/store/apps/details?id=com.espol.nami&hl=es" target="_blank">
+          <a href="https://play.google.com/store/apps/details?id=com.espol.namidos&hl=es" target="_blank">
 					<img src="img/works/galeria-game1.jpg" alt="">
 					<div class="overlay">
 
@@ -288,7 +288,7 @@
 				</figure>
 
 				<figure class="mix work-item web">
-          <a href="http://xn--amiam-ntad.com/" target="_blank">
+          <a href="https://naminam.herokuapp.com/" target="_blank">
 					<img src="img/works/galeria-web1.jpg" alt="">
 					<div class="overlay">
 
@@ -298,7 +298,7 @@
         </a>
 				</figure>
 
-				<figure class="mix work-item videojuego">
+				<!-- <figure class="mix work-item videojuego">
           <a href="https://play.google.com/store/apps/details?id=eduec.tea.anibopi" target="_blank">
 					<img src="img/works/galeria-game4.jpg" alt="">
 					<div class="overlay">
@@ -307,7 +307,7 @@
 						<p>Videojuego móvil</p>
 					</div>
         </a>
-				</figure>
+				</figure> -->
 
 				<figure class="mix work-item web">
           <a href="http://www.ctmas.transespol.gob.ec/" target="_blank">
